# Campus

./: .gitignore  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  dockerfile  makefile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: test-and-lint.yml
app/: .flake8  db.sqlite3
app/app/: urls.py
app/app/settings/: base.py  dev.py
app/core/: models.py  wagtail_hooks.py
app/core/migrations/: 0001_initial.py  0002_blog_profile_blogmedia_relationship.py  0003_profile_is_paid_profile_like_count_profile_number.py  0004_profile_liked_profiles.py  0005_alter_profile_liked_profiles.py
app/core/tests/: test_admin.py  test_models.py
app/profilee/: serializers.py  urls.py  views.py
app/profilee/tests/: test_profile.py
app/static/: staticfiles.json
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
delsu/: db.sqlite3  views.py  wsgi.py
delsu/settings/: base.py  dev.py
delsu/static/css/: snippet_header.css
delsu/templates/: base.html  snippet_header.html
home/templates/home/: home_page.html  (+1 more)
home/templatetags/: custom_filters.py  custom_tags.py
nextjs-wagtail/: package-lock.json  package.json
vibes/: Dockerfile  manage.py
vibes/blogs/: blocks.py  models.py
vibes/custom_comments/: __init__.py  forms.py  views.py  wagtail_hook.py
vibes/home/: models.py  views.py
vibes/relationship/: models.py
vibes/vibes/: urls.py  wsgi.py
wag/: wsgi.py
wag/settings/: base.py  dev.py
wag/templates/: base.html  snippet_header.html
(+20 files in other folders)
